@@ -12,10 +12,13 @@ DIST jdk-7-ea-bin-b18-linux-amd64-16_aug_2007.bin 56157159 RMD160 380fb6b749691b
 DIST jdk-7-ea-bin-b18-linux-i586-16_aug_2007.bin 62885035 RMD160 d18721bd8f78fa1128ae1f9d552c1479c854c141 SHA1 6036b9f426e60a8b5cc9438982f7ad0d83ddf049 SHA256 477d09408f27ad1924480b48cb3d379ce525aa220a585ce754893cdd535d0dff
 DIST jdk-7-ea-bin-b21-linux-amd64-27_sep_2007.bin 55719280 RMD160 dd7e64688d709e1121bfd5c216c76b4f90c944d7 SHA1 ab3ceb49e9b63e2d51338f413efa9f39f3a7dc06 SHA256 cde8c3ab87d61a3a1422df01602924f3a4c2cb4fc92e34f0daab9f5aabe493b1
 DIST jdk-7-ea-bin-b21-linux-i586-27_sep_2007.bin 62378861 RMD160 2a8ad41a58a3c2530ca19e8167b247c645708e10 SHA1 7b48f44ebb7081e7e69de398005a80980c2d547d SHA256 3a57512f5c95b6cbd33e3456d23aeab7c4882a395a65b28573024091689dfab8
+DIST jdk-7-ea-bin-b22-linux-amd64-12_oct_2007.bin 55123803 RMD160 171cf50b2bfe739a144cef36faf1c01b5430b350 SHA1 30fd795cf0b8c8e760b26304be583f389fa9eee1 SHA256 06ad43708666c51f12d9d5dd6bb18b1d8b3359a7e4a0cdba7d3c082f54b49cab
+DIST jdk-7-ea-bin-b22-linux-i586-12_oct_2007.bin 61599449 RMD160 55c6fc47d6420f1e12993bb4d9650b7e4944e872 SHA1 a6846fac5b9e7bb5b59c6653bda32f725e8694d4 SHA256 35dc3f58bdc38351febcb45efe57f5a423dfaa1a24cc4379e37ecb91fdaf1493
 EBUILD sun-jdk-1.7.0.0_alpha13.ebuild 4873 RMD160 1d78dad22213b301a070c7b8bd0a78681990dabf SHA1 b7337473702fd386ced1a531b64311df9866acbe SHA256 808082527437af2f82da0825be29069711fad716b9e4cd2d0e5ef22b120f1a55
 EBUILD sun-jdk-1.7.0.0_alpha14.ebuild 4932 RMD160 343033524172a19b96d670636fa13ebf5380daee SHA1 106a3700084bcf0724fe91fa283bb2319a777ebb SHA256 6644966378ce563625cf2f53023bbdc24587abb8294bacc2b35fce48901236d7
 EBUILD sun-jdk-1.7.0.0_alpha15.ebuild 4932 RMD160 832a3c5e5cc9c463417935e721a7a344c0e75e85 SHA1 4a3ca78747d993d59bbb05517d71a0c4027bf65f SHA256 76fb480e97b921b5a4cb53ea0b32d3d7ad8f758f14f6164461d2ad5addda7931
 EBUILD sun-jdk-1.7.0.0_alpha16.ebuild 4932 RMD160 312469dc78bdeed884998ef51074fea4ece54b06 SHA1 85d0b34dfb25f763d3f7619993f73c0757dbb3a1 SHA256 2ce8ef81adfdbeb6ee2966a44a8e5b6457fc3df2a543afa08096362b855cf887
 EBUILD sun-jdk-1.7.0.0_alpha18.ebuild 4932 RMD160 a8b4f0fa1c741edb0f2bdcfe1ba5a8b19119c621 SHA1 931b37b70ca9a6c8073af8a832fb1672cde62a03 SHA256 36d712d07c65e3af49090f93ab1f3530e29f8140a3ada438ea61549cc7cf8beb
 EBUILD sun-jdk-1.7.0.0_alpha21.ebuild 4932 RMD160 9c5fbf1d32d652672dcd9eba97fedafc361c4b46 SHA1 c16dbef535511a683357da002dd710272ec71250 SHA256 1bf1a889733ce476e5aa4dc331ad6e79be63ab9931442baee543cbd439d6e619
-MISC ChangeLog 5799 RMD160 f8733cfdd0579341aa6cf287857150db10a28ae8 SHA1 c1cf27537dd460750bbf6a12ae553a05d9bf5fb5 SHA256 936d4b8752b005716424283ad0d095e501652e057732a5e8b598830475ef9a4a
+EBUILD sun-jdk-1.7.0.0_alpha22.ebuild 4932 RMD160 3a9453a02f7de86e7acadfebae15aef89281d2a6 SHA1 5cd744f4e963f46fef3387c735f944b50a30df87 SHA256 035bc12cd8ec5a8cb04c37e3c220bafe66faefd7d8461941acf9c50a20210479
+MISC ChangeLog 5984 RMD160 cef57c4e02ea7d7fbd7c5c2b4cfab975a68ab0bc SHA1 6ad30eeaf454a1b9135104e1e90fdd19a83d3106 SHA256 54138b50e01b753793cc7870d5d47e8a865613351d3755cd511715f9fd6c7736
